--- a/exp1/CMakeLists.txt
+++ b/exp1/CMakeLists.txt
@@ -4,7 +4,9 @@ project(exp1 )
 include(CTest)
 enable_testing()
 
-add_executable(exp1 main.cpp)
+set(SOURCES src/main.cpp src/Students.cpp)
+add_executable(exp1 ${SOURCES})
+target_include_directories(exp1 PRIVATE  include/)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
