--- a/HW/HW3/CMakeLists.txt
+++ b/HW/HW3/CMakeLists.txt
@@ -1,10 +1,8 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(exp2 )
+project(HW3 )
 
-include(CTest)
-enable_testing()
 
-set(SOURCES main.cpp)
+set(SOURCES  main.cpp)
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_include_directories(${PROJECT_NAME} PRIVATE  include/)
 
